WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161995
YARR doesn't check for invalid flags for literal regular expressions
https://bugs.webkit.org/show_bug.cgi?id=161995
Summary
YARR doesn't check for invalid flags for literal regular expressions
Michael Saboff
Reported
2016-09-14 14:52:45 PDT
A regular expression like /a/Z doesn't create an error.
Attachments
Patch
(4.12 KB, patch)
2016-09-14 15:05 PDT
,
Michael Saboff
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2016-09-14 14:53:27 PDT
<
rdar://problem/27975736
>
Michael Saboff
Comment 2
2016-09-14 15:03:06 PDT
Note that is is only a problem for literal regular expressions in JavaScript code. When the new RegExp() constructor is used, the flags are checked.
Michael Saboff
Comment 3
2016-09-14 15:05:25 PDT
Created
attachment 288869
[details]
Patch
Mark Lam
Comment 4
2016-09-14 15:11:51 PDT
Comment on
attachment 288869
[details]
Patch r=me
WebKit Commit Bot
Comment 5
2016-09-14 16:20:06 PDT
Comment on
attachment 288869
[details]
Patch Clearing flags on attachment: 288869 Committed
r205937
: <
http://trac.webkit.org/changeset/205937
>
WebKit Commit Bot
Comment 6
2016-09-14 16:20:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug