JSTests/stress/regress-161995.js
@@ -1,0 +1,14 @@
+// Regression test for 161995.
+
+function testStatic()
+{
+    return /a/Z;
+}
+
+try {
+    testStatic();
+    throw "Expected a SyntaxEerror for bad RegExp flags, but didn't get one.";
+} catch(e) {
+    if (e != "SyntaxError: Invalid regular expression: invalid flags")
+        throw "Incorrect exception for bad RegExp flags.  Got: " + e;
+}
